2003-10-17  Jim Blandy  <jimb@redhat.com>

	Merged from mainline: 
	
	2003-09-22  Jim Blandy  <jimb@redhat.com>

	* dwarf2read.c (read_array_type): When building the type for an
	array of unspecified length, make sure to choose the upper bound
	so that the array's total length comes out to be zero --- that's
	how we represent such arrays.

2003-10-09  Daniel Jacobowitz  <drow@mvista.com>

	* remote-mips.c (mips_initialize): Remove unneeded call to
	get_selected_frame.  Suggested by Atsushi Nemoto <anemo@mba.ocn.ne.jp>.

2003-10-09  Daniel Jacobowitz  <drow@mvista.com>

	Merge from mainline:
	2003-07-31  Daniel Jacobowitz  <drow@mvista.com>

	* dwarf2read.c (new_symbol): Use var_decode_location for parameters.

2003-10-09  Daniel Jacobowitz  <drow@mvista.com>

	* dwarf2expr.c (execute_stack_op): Don't treat the frame base as
	a memory pointer.

2003-10-04  GDB Administrator  <gdbadmin@sourceware.org>

	* version.in:  Bump toversion 6.0.0.90.

2003-10-01  GDB Administrator  <gdbadmin@sourceware.org>

	* version.in: Bump to version 6.0.

2003-09-30  Andrew Cagney  <cagney@redhat.com>

	* rs6000-tdep.c (rs6000_gdbarch_init): Set the PowerOpen red zone
	to 224, not 220.

2003-09-29  Andrew Cagney  <cagney@redhat.com>

	* NEWS: Mention Objective-C.

2003-09-27  GDB Administrator  <gdbadmin@sourceware.org>

	* version.in: Bump to version 5.3.93.

2003-09-25  Andrew Cagney  <cagney@redhat.com>

	* NEWS: Mention the new backtrace mechanism, DWARF 2 CFI, hosted
	file I/O, multi-arch, TLS and NPTL, DWARF 2 Location Expressions,
	and Java.
	* PROBLEMS: Mention that mips*-*-*, powerpc*-*-*, sparc*-*-* and
	arm*-*-* do not use the new frame code.

2003-09-22  Jeff Johnston  <jjohnstn@redhat.com>

	Merge from mainline:
	2003-09-22  Jeff Johnston  <jjohnstn@redhat.com>

        * top.c (quit_force): Fix indirect call to quit_target so
        a struct qt_args pointer is passed.

2003-09-19  Daniel Jacobowitz  <drow@mvista.com>

	Merge from mainline: