@@ -1,3 +1,13 @@
+2003-10-29  Mark Kettenis  <kettenis@gnu.org>
+
+	Merged from mainline:
+
+	2003-10-29  Mark Kettenis  <kettenis@gnu.org>
+	
+	* objfiles.h (clear_objfile_data): New prototype.
+	* objfiles.c (clear_objfile_data): New function.
+	* symfile.c (reread_symbols): Clear per-objfile data.
+
 2003-10-17  Jim Blandy  <jimb@redhat.com>
 
 	Merged from mainline: 
